# hermes-subnet

./: .env.example  .env.miner.example  .env.validator.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  test_miner.py
agent/: stats.py
agent/subquery_graphql_agent/: base.py  thegraph_tools.py  tools.py
common/: agent_manager.py  enums.py  errors.py  meta_config.py  project_manager.py  prompt_template.py  protocol.py  settings.py  stats.html  table_formatter.py  utils.py
docs/: local_test.md  miner.md  running_on_testnet.md  validator.md
hermes/: base.py
hermes/validator/: api.py  benchmark.py  challenge_manager.py  ema.py  multiprocess_query.py  question_generator.py  scorer_manager.py  workload_manager.py
hermes_subnet/: __init__.py  protocol.py
hermes_subnet/base/: miner.py  neuron.py  validator.py
neurons/: miner.py  validator.py
projects/miner/QmfUNJC1Qz8m3F67sQmxrwjuSAu4WaCR1iBdPPdzBruQ7P/: config.json
projects/miner/QmfUNJC1Qz8m3F67sQmxrwjuSAu4WaCR1iBdPPdzBruQ7P_e4ae3190/: config.json  tools.py
projects/validator/QmfUNJC1Qz8m3F67sQmxrwjuSAu4WaCR1iBdPPdzBruQ7P/: config.json
projects/validator/QmfUNJC1Qz8m3F67sQmxrwjuSAu4WaCR1iBdPPdzBruQ7P_e4ae3190/: config.json
tests/: test_template_validator.py
